[package]
name = "async-file-notify"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]

[dependencies]
async-io = "1.12.0"
async-lock = "2.6.0"
blocking = "1.3.0"
futures-lite = "1.12.0"
log = "0.4.17"
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
walkdir = "2.3.2"
